[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Level Selection/LevelShortcut.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level Selection/ui-menu-wireframe.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Level Selection/kostja_ball_unhovered.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Level Selection/kostja_ball_disabled.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Level Selection/kostja_ball_hovered.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Level Selection/Star_Filled.png" type="Texture" id=6]
[ext_resource path="res://main_menu_font.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=3]

resource_name = "ButtonDisabled"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]

resource_name = "ButtonEnabled"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Button:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]

resource_name = "Mouse_Hover"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/BestTime:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Sprite3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/CollectiblesCollected:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]

resource_name = "Mouse_Hover_Down"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/BestTime:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Sprite3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/CollectiblesCollected:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="LevelShortcut" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]
scene_to_load = null
LevelNumber = ""

[node name="backgroundtest" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( 956.802, 538.375 )
texture = ExtResource( 2 )

[node name="Button" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -23.0
margin_right = 29.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.5
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Focus", "Size Flags", "Textures", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/ButtonDisabled = SubResource( 3 )
anims/ButtonEnabled = SubResource( 4 )
anims/Mouse_Hover = SubResource( 1 )
anims/Mouse_Hover_Down = SubResource( 2 )
blend_times = [  ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="3"]

layer = 99
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer" index="0"]

visible = false
position = Vector2( 1096.26, 290.212 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite2" type="Sprite" parent="CanvasLayer" index="1"]

visible = false
position = Vector2( 1205.61, 259.831 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite3" type="Sprite" parent="CanvasLayer" index="2"]

visible = false
position = Vector2( 1310.49, 288.492 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Visibility" ]

[node name="BestTime" type="Label" parent="CanvasLayer" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1484.0
margin_top = 242.0
margin_right = 2164.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "20.00"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="CollectiblesCollected" type="Label" parent="CanvasLayer" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1554.0
margin_top = 352.0
margin_right = 1594.0
margin_bottom = 397.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="Levelnumber" type="Label" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -5.0
margin_top = -6.0
margin_right = 35.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "01"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="focus_entered" from="Button" to="." method="_on_Button_focus_entered"]

[connection signal="focus_exited" from="Button" to="." method="_on_Button_focus_exited"]

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]

[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


